--- a/angular7-crud/src/app/product-detail/product-detail.component.scss
+++ b/angular7-crud/src/app/product-detail/product-detail.component.scss
@@ -19,3 +19,21 @@
   .mat-flat-button {
     margin: 5px;
   }
+
+  /*DL, DT, DD TAGS LIST DATA*/
+dl {
+  margin-bottom:50px;
+}
+
+dl dt {
+  float:left; 
+  font-weight:bold; 
+  margin-right:10px; 
+  padding:5px;  
+  width:100px; 
+}
+
+dl dd {
+  margin:2px 0; 
+  padding:5px 0;
+}
