--- a/angular7-crud/src/app/modules/product/products/products.component.scss
+++ b/angular7-crud/src/app/modules/product/products/products.component.scss
@@ -3,6 +3,10 @@
     position: relative;
     padding: 5px;
   }
+
+  .placeholder {
+    color: #333;
+  }  
   
   .example-table-container {
     position: relative;
